src/test/ui/parser/issues/issue-84148-2.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-84148-2.rs:3:16
   |
LL | fn f(t:for<>t?
   |     -          ^
   |     |
   |     unclosed delimiter

error: invalid `?` in type
  --> $DIR/issue-84148-2.rs:3:14
   |
LL | fn f(t:for<>t?
   |              ^ `?` is only allowed on expressions, not types
   |
help: if you meant to express that the type might not contain a value, use the `Option` wrapper type
   |
LL | fn f(t:Option<for<>t>
   |        +++++++      ~

error: expected one of `->`, `where`, or `{`, found `<eof>`
  --> $DIR/issue-84148-2.rs:3:16
   |
LL | fn f(t:for<>t?
   |                ^ expected one of `->`, `where`, or `{`

error: aborting due to 3 previous errors

