src/test/ui/parser/issues/issue-84148-2.rs
// error-pattern: this file contains an unclosed delimiter
// error-pattern: invalid `?` in type
fn f(t:for<>t?
